fix(commit): Fix certificate text overflow (#16494)
Layout certificate buttons vertically

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -48,6 +48,10 @@ pre.wrappable {
   border-color: @brand-primary;
 }
 
+.btn-group-vertical {
+  width: 100%;
+}
+
 .full-screen-body-background {
   background-color: @body-bg;
 }
